Fix example path

--- a/exercises/practice/two-fer/.meta/config.json
+++ b/exercises/practice/two-fer/.meta/config.json
@@ -8,7 +8,7 @@
       "two-fer.spec.coffee"
     ],
     "example": [
-      "example.coffee"
+      ".meta/example.coffee"
     ]
   },
   "blurb": "Create a sentence of the form \"One for X, one for me.\".",
