--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
     name: Check exercises
     runs-on: ubuntu-22.04
     steps:
-        run: apt-get update && apt-get install -y jq
+      - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9
       - name: Install CoffeeScript
         run: npm install -g jasmine-node coffeescript
       - name: Run tests
