Key features: typos and some wording changes.

--- a/config.json
+++ b/config.json
@@ -366,16 +366,16 @@
   "key_features": [
     {
       "title": "Compile to JavaScript",
-      "content": "Compile to JavaScript, allowing you to use CoffeeScript anywhere JavaScript is used.",
+      "content": "Allowing you to use CoffeeScript anywhere JavaScript is used.",
       "icon": "web"
     },
     {
-      "title": "Simple Syntax",
+      "title": "Simple syntax",
       "content": "CoffeeScript has a simple syntax, inspired by Ruby and Python, that is easy to read and write.",
       "icon": "fun"
     },
     {
-      "title": "Saftey features",
+      "title": "Safety features",
       "content": "CoffeeScript allows you to check for existence and doesnt have a `var` keyword.",
       "icon": "safe"
     },
@@ -386,12 +386,12 @@
     },
     {
       "title": "Destructuring assignment",
-      "content": "Allowing you to handle multiple return values from a function or multiple properties from an object.",
+      "content": "Handle multiple return values from a function or multiple properties from an object.",
       "icon": "productive"
     },
     {
-      "title": "Multi paradigm",
-      "content": "Use which ever paradigm you want, functional, object-oriented or imperative programming.",
+      "title": "Multi-paradigm",
+      "content": "Use which ever paradigm you want: functional, object-oriented or imperative programming.",
       "icon": "multi-paradigm"
     }
   ],
