--- a/config.json
+++ b/config.json
@@ -114,6 +114,14 @@
         ]
       },
       {
+        "slug": "darts",
+        "name": "Darts",
+        "uuid": "2e7a7952-9db5-4aa6-9985-6561fac3853d",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "luhn",
         "name": "Luhn",
         "uuid": "85c6c117-0173-4a1a-ae33-86427d6512dd",
