--- a/config.json
+++ b/config.json
@@ -223,6 +223,14 @@
         ]
       },
       {
+        "slug": "protein-translation",
+        "name": "Protein Translation",
+        "uuid": "f14ba160-10c8-4471-a49c-f394e4ad64eb",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "reverse-string",
         "name": "Reverse String",
         "uuid": "1b4c8b0f-a7cc-4db1-a0ad-485dc2b320d7",
