Add pangram exercise

--- a/config.json
+++ b/config.json
@@ -470,6 +470,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2
+      },
+      {
+        "slug": "pangram",
+        "name": "Pangram",
+        "uuid": "b008c134-7cf2-4836-bf5b-018a89a82a5e",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
       }
     ]
   },
