add dnd-character (#264)
* Add dnd-character

* Bump up difficulty

--- a/config.json
+++ b/config.json
@@ -486,6 +486,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2
+      },
+      {
+        "slug": "dnd-character",
+        "name": "D&D Character",
+        "uuid": "6f421414-3668-450d-a7ea-bba6d4e0d75f",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 3
       }
     ]
   },
