--- a/config.json
+++ b/config.json
@@ -642,6 +642,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2
+      },
+      {
+        "slug": "minesweeper",
+        "name": "Minesweeper",
+        "uuid": "fe341c5e-0292-455f-93be-1ffb8f0b4b3b",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 8
       }
     ]
   },
