Pascals to Pascal's

--- a/config.json
+++ b/config.json
@@ -315,7 +315,7 @@
       },
       {
         "slug": "pascals-triangle",
-        "name": "Pascals Triangle",
+        "name": "Pascal's Triangle",
         "uuid": "ee80988f-f1df-4958-b164-0e7fba9d1305",
         "practices": [],
         "prerequisites": [],
