--- a/config.json
+++ b/config.json
@@ -399,7 +399,7 @@
       },
       {
         "slug": "rna-transcription",
-        "name": "Rna Transcription",
+        "name": "RNA Transcription",
         "uuid": "d47b7ced-f2e6-47fd-b796-9c21448b1c14",
         "practices": [],
         "prerequisites": [],
