Add all-your-base exercise

--- a/config.json
+++ b/config.json
@@ -730,6 +730,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5
+      },
+      {
+        "slug": "all-your-base",
+        "name": "All Your Base",
+        "uuid": "b3bfbbd9-a0f4-4cbf-848b-f889bb0241a0",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 3
       }
     ]
   },
