--- a/config.json
+++ b/config.json
@@ -754,6 +754,14 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 5
+      },
+      {
+        "slug": "knapsack",
+        "name": "Knapsack",
+        "uuid": "a385b861-22a5-4319-9fc0-c0228640ce26",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 6
       }
     ]
   },
