--- a/config.json
+++ b/config.json
@@ -502,6 +502,14 @@
         "difficulty": 2
       },
       {
+        "slug": "sublist",
+        "name": "Sublist",
+        "uuid": "860ca217-9d4f-4102-9b98-1c524a477bbf",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "triangle",
         "name": "Triangle",
         "uuid": "42292f42-ccfe-4103-a6f3-a057bca32c49",
