Deprecated in favor of all-your-base

--- a/config.json
+++ b/config.json
@@ -101,6 +101,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 2,
+        "status": "deprecated",
         "topics": [
           "integers",
           "math",
@@ -221,6 +222,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
+        "status": "deprecated",
         "topics": [
           "integers",
           "math",
@@ -536,6 +538,7 @@
         "practices": [],
         "prerequisites": [],
         "difficulty": 3,
+        "status": "deprecated",
         "topics": [
           "integers",
           "math",
