--- a/config.json
+++ b/config.json
@@ -536,6 +536,14 @@
         "difficulty": 2
       },
       {
+        "slug": "sum-of-multiples",
+        "name": "Sum of Multiples",
+        "uuid": "2e6dcbe2-bef0-4f37-b048-7701fe116c4c",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "triangle",
         "name": "Triangle",
         "uuid": "42292f42-ccfe-4103-a6f3-a057bca32c49",
