--- a/config.json
+++ b/config.json
@@ -186,6 +186,14 @@
         "difficulty": 2
       },
       {
+        "slug": "flatten-array",
+        "name": "Flatten Array",
+        "uuid": "c738dc79-13ca-4a61-b25d-23fde54d588f",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 2
+      },
+      {
         "slug": "gigasecond",
         "name": "Gigasecond",
         "uuid": "1d797dbb-90e3-424c-91de-430e41a71ab1",
