Add traced-array to editor

--- a/exercises/practice/binary-search/.meta/config.json
+++ b/exercises/practice/binary-search/.meta/config.json
@@ -11,6 +11,9 @@
     ],
     "example": [
       ".meta/example.coffee"
+    ],
+    "editor": [
+      "traced-array.coffee"
     ]
   },
   "blurb": "Implement a binary search algorithm.",
