--- a/config.json
+++ b/config.json
@@ -831,12 +831,21 @@
         "difficulty": 5
       },
       {
+        "slug": "flower-field",
+        "name": "Flower Field",
+        "uuid": "02887f9c-e666-439b-a726-03c35dfb5f2c",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 8
+      },
+      {
         "slug": "minesweeper",
         "name": "Minesweeper",
         "uuid": "fe341c5e-0292-455f-93be-1ffb8f0b4b3b",
         "practices": [],
         "prerequisites": [],
-        "difficulty": 8
+        "difficulty": 8,
+        "status": "deprecated"
       },
       {
         "slug": "simple-linked-list",
