--- a/config.json
+++ b/config.json
@@ -753,6 +753,14 @@
         "difficulty": 5
       },
       {
+        "slug": "say",
+        "name": "Say",
+        "uuid": "0f01ba32-e46b-47ac-93c7-e0c3739424ae",
+        "practices": [],
+        "prerequisites": [],
+        "difficulty": 5
+      },
+      {
         "slug": "spiral-matrix",
         "name": "Spiral Matrix",
         "uuid": "2bf4fbd5-cc07-4b7e-b733-d787981bc587",
